syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Nacos";

message Metadata {

    string type = 3;
    string clientIp = 8;
    map<string, string> headers = 7;
}

message Payload {
    Metadata metadata = 2;
    google.protobuf.Any body = 3;
}

service RequestStream {
    rpc requestStream (Payload) returns (stream Payload) {
    }
}

service Request {
    rpc request (Payload) returns (Payload) {
    }
}

service BiRequestStream {
    rpc requestBiStream (stream Payload) returns (stream Payload) {
    }
}